# flow-manager

./: .env-example  Makefile  README.md  docker-compose.yml  pyproject.toml
src/apps/workflows/: admin.py  apps.py  enums.py  models.py
src/apps/workflows/migrations/: 0001_initial.py  0002_initial.py  0003_stepworkflow.py
src/apps/workflows/schemas/: admin.py  models.py
src/commons/helpers/enums/: __init__.py  base.py
src/core/: asgi.py  wsgi.py
src/core/settings/: base.py
